# Qt

./: .gitignore  README.md
QML_demo/ChartView/: CMakeLists.txt  Main.qml  main.cpp
QML_demo/attributeType/: CMakeLists.txt  Main.qml  Main.qml.autosave.cnKcWW  file.xml  main.cpp  mylistmodel.cpp  mylistmodel.h  myobject.cpp  myobject.h
QML_demo/base/: AnimationComponent.qml  AnimationComponentV2.qml  AnimationComponentV3.qml  BrightSquare.qml  ButtonComponent.qml  Deleqateshapeshift.qml  EasingType.qml  TextEditComponent.qml  TextInputComponent.qml  base.qml  base.qmlproject  demo1.qml
QML_demo/desktopapp/: CMakeLists.txt  Main.qml  main.cpp
QML_demo/desktopmobileapp/: CMakeLists.txt  Main.qml  main.cpp
QML_demo/desktopmobileapp/+android/: main.qml
QML_demo/documentWindows/: CMakeLists.txt  DocumentWindows.qml  Main.qml  main.cpp
QML_demo/imagine/: CMakeLists.txt  Main.qml  main.cpp  qtquickcontrols2.conf
QML_demo/mobileapp/: CMakeLists.txt  Main.qml  main.cpp
QML_demo/modelView/: CMakeLists.txt  DelegateAnimateExample.qml  GridViewExample.qml  ListViewExample.qml  Main.qml  RepeaterExample.qml  main.cpp
QML_demo/modelView/common/: BlueBox.qml  GreenBox.qml
QML_demo/nestedscreens/: About.qml  CMakeLists.txt  EditProfile.qml  Home.qml  Main.qml  Main.qml.autosave  Profile.qml  main.cpp
QML_demo/nestedscreens/swipeFile/: Swipe1.qml  Swipe2.qml  Swipe3.qml
QML_demo/rotationExample/: rotation.qml  rotation.qmlproject
demo1/: BlueSquare.qml  BlueSquare2.qml  DarkSquare.qml  GreenSquare.qml  GreenSquare2.qml  ImageComponent.qml  RedSquare.qml  demo1.qml  demo1.qmlproject
gobang/: game.cpp  game.h  gobang.pro
